--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -115,7 +115,7 @@
           </label>
         </p>
       </div>
-      <script type="text/javascript" src="/assets/js/darkmode.js"></script>
+      <script type="text/javascript" src={{ "/assets/js/darkmode.js" | relative_url }}></script>
       {%- endif -%}
     </section>
     <section class="content">
