--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -133,9 +133,11 @@
   {%- endif -%}
 
   {% if site.plainwhite.search %}
-  <script src="/assets/js/simple-jekyll-search.min.js"></script>
-  <script src="/assets/js/search.js"></script>
+  <script src={{ "/assets/js/simple-jekyll-search.min.js" | relative_url }}></script>
+  <script src={{ "/assets/js/search.js" | relative_url }}></script>
   {% endif %}
 </body>
 
 </html>
+
+
